# springs

./: .flake8  .gitignore  CNAME  Gemfile  LICENSE  README.md  _config.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
_includes/: head-custom-google-analytics.html
assets/css/: style.scss
docs/: index.md
res/: springs.sketch
scripts/: preview-website.sh  push-to-pypi.sh  spring-pypi.sh
springs/: README.md  __init__.py  cache.py  commandline.py  core.py  flexyclasses.py  initialize.py  logging.py  nicknames.py  resolvers.py  setup.cfg  types.py  utils.py  warnings.py
springs/script/: push-to-pypi.sh
springs/src/springs/: __init__.py  cache.py  cli.py  commandline.py  core.py  init.py  logging.py  resolvers.py  utils.py
src/espresso_config/: __init__.py  builtin_refs.py  command_line.py  commandline.py  defaults.py  exceptions.py  experimental.py  functional.py  instantiate.py  logging.py  main.py  meta_params.py  node.py  parser.py  registry.py  utils.py
src/springs/: EDITABLE  __init__.py  __main__.py  cache.py  commandline.py  core.py  deprecated.py  field_utils.py  field_utils.pyi  flexyclasses.py  init.py  initialize.py  logging.py  memoize.py  memoizer.py  nicknames.py  resolvers.py  rich_utils.py  shortcuts.py  traversal.py  types.py  types_utils.py  utils.py
tests/: __init__.py  test_create.py  test_flexyclass.py  test_full_config.py  test_initialize.py  test_memoize.py  test_merge.py  test_nested_init.py  test_new_merge.py  test_nicknames.py  test_pickle.py  test_resolvers.py  test_resolvers_in_nested.py  test_serialization.py
tests/fixtures/full_config/: __main__.py  config.py  config.yaml
