[project]
name = "springs"
version = "1.8.6"
description = "A set of utilities to create and manage typed configuration files effectively, built on top of OmegaConf."
authors = [
    {name = "Luca Soldaini", email = "luca@soldaini.net" }
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "omegaconf>=2.2.0",
    "types-pyyaml>=6.0.0",
    "typing_extensions>=4.2.0",
    "get-annotations>=0.1.2",
    "platformdirs>=2.5.0",
    "rich>=11.0.0",
    "pathvalidate>=2.5.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "configuration",
    "yaml",
    "json",
    "command line",
    "cli",
    "omegaconf",
    "structured",
    "config"
]

[project.urls]
Homepage = "https://springs.soldaini.net"
Repository = "https://github.com/soldni/Springs"
"Bug Tracker" = "https://github.com/soldni/Springs/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
springs = ["py.typed", "*.pyi"]

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "pytest>=5.2",
    "ipython>=8.4.0",
    "autopep8>=1.7.0",
    "flake8>=5.0",
    "ipdb>=0.13.0",
    "flake8-pyi>=22.8.1",
    "Flake8-pyproject>=1.1.0"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
aggressive = 3

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_site_packages = true
allow_redefinition = false
exclude = [
    "tmp",
]

[tool.mypy-tests]
strict_optional = false

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401',
    '*.pyi:E302,E305',
]
