[metadata]
name = espresso-config
version = 0.10.2
author = Luca Soldaini
author_email = luca@soldaini.net
description = A struct config parser that you can set up in the
              time it takes to make an espresso.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soldni/espresso-config
project_urls =
    Bug Tracker = https://github.com/soldni/espresso-config/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml >= 6

[options.packages.find]
where = src