[metadata]
name = springs
version = 1.0.4
author = Luca Soldaini
author_email = luca@soldaini.net
description = A set of utilities to create and manage configuration
    files effectively, built on top of OmegaConf.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soldni/Springs
project_urls =
    Bug Tracker = https://github.com/soldni/Springs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    omegaconf >= 2.1.0

[options.packages.find]
where = src
