[metadata]
name = springs
version = 1.3.1
author = Luca Soldaini
author_email = luca@soldaini.net
description = A set of utilities to create and manage configuration
    files effectively, built on top of OmegaConf.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soldni/Springs
project_urls =
    Bug Tracker = https://github.com/soldni/Springs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.8
install_requires =
    omegaconf >= 2.2.0
    types-pyyaml >= 6.0.0
    typing_extensions >= 4.2.0
    get-annotations >= 0.1.2


[options.packages.find]
where = .
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    scripts
    tmp

[flake8]
per-file-ignores =
    # imported but unused
    __init__.py: F401
    *.pyi: E302, E701, E305

[options.package_data]
springs =
    py.typed
